--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -22,14 +22,15 @@ header {
     }
   }
   
-  @media screen and (min-width: 150px) {
+  @media only screen and (min-width: 320px) {
     nav {
       display: flex;
       justify-content: space-evenly;
       text-align: center;
-      font-size: 1em;
+      font-size: .5;
       a {
         text-decoration: none;
+        font-size: .5em;
       }
     }
   }
@@ -39,8 +40,9 @@ header {
       justify-content: space-evenly;
       text-align: center;
       font-size: 1em;
-      a{
+      a {
         text-decoration: none;
+        font-size: .8em;
       }
     }
   }
