--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -5,7 +5,7 @@
     border-radius: 1em;
     margin: .5em;
     padding: 1em;
-    box-shadow: 12px 12px 2px 1px rgba(0, 0, 255, .2);
+    box-shadow: 2px 2px 2px 1px  rgba(255, 166, 0, 0.664);
         label {
         text-align: center;
         font-size: 1.5em;
@@ -13,12 +13,15 @@
         input {
             align-content: center;
             display: block;
+            border:  1px rgb(66, 66, 66) solid;
+            border-radius: 2em;
         }
     }
     button {
+        margin: 1em;
         font-size: 1.5em;
         background-color: white;
         border: 2px orangered solid;
-        box-shadow: 2px 2px 2px 1px orange;
+        box-shadow: 2px 2px 2px 1px rgba(255, 166, 0, 0.664);
     }
 }
