--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -6,9 +6,26 @@
       margin: auto;
     }
   
-    img {
+    #banner {
+      
       width: 100%;
       margin: auto;
       display: block;
+    }
+    #about {
+      margin-top: 1em;
+      margin-bottom: 1em;
+      display: grid;
+      grid-template-columns: 50% 50%;
+      img {
+        width: 50%;
+      margin: auto;
+      }
+      p {
+        display: inline;
+      }
+    }
+    #tweets {
+      margin: -1em;
     }
   }
