user/profile css

--- a/src/components/user/User.css
+++ b/src/components/user/User.css
@@ -2,9 +2,15 @@ article {
   text-align: center;
 } 
 figure {
-  margin: 0;
+  margin: .5em;
 }
 img {
   border-radius: 60px;
   margin: 0;
+}
+h3 {
+  margin: .5em;
+}
+h2{
+  margin: .5em;
 }
