--- a/src/components/user/User.css
+++ b/src/components/user/User.css
@@ -7,12 +7,18 @@
   }
   img {
     border-radius: 60px;
-    margin: 0;
+    margin: auto;
   }
   h3 {
+    text-align: center;
     margin: .5em;
   }
-  h2{
+  h4{
+    text-align: center;
     margin: .5em;
+  }
+  p {
+    font-size: .75em;
+    text-align: center;
   }
 }
