--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -24,6 +24,21 @@ header {
       color: black;
     }
   }
-  
-  
+
+  @media only screen and (min-width: 750px) {
+    h1 {
+      font-size: 3em;
+    }
+    nav {
+      a {
+        padding: 1em;
+        color: white;
+        font-size: 1.25em;
+        text-decoration: none;
+        :hover {
+          color: black;
+    }
+    }
+  }
+}
 }
