--- a/src/components/login/Login.css
+++ b/src/components/login/Login.css
@@ -1,11 +1,12 @@
 .Form {
+    background-color: white;
     text-align: center;
     display: block;
-    border: 2px orangered solid;
+    border: 2px black;
     border-radius: 1em;
     margin: .5em;
     padding: 1em;
-    box-shadow: 2px 2px 2px 1px  rgba(255, 166, 0, 0.664);
+    box-shadow: 2px 2px 2px 1px  black;
         label {
         text-align: center;
         font-size: 1.5em;
@@ -13,7 +14,7 @@
         input {
             align-content: center;
             display: block;
-            border:  1px rgb(66, 66, 66) solid;
+            border:  2px rgb(66, 66, 66) solid;
             border-radius: 2em;
         }
     }
@@ -21,7 +22,7 @@
         margin: 1em;
         font-size: 1.5em;
         background-color: white;
-        border: 2px orangered solid;
-        box-shadow: 2px 2px 2px 1px rgba(255, 166, 0, 0.664);
+        border: 2px black;
+        box-shadow: 2px 2px 2px 1px black;
     }
 }
