--- a/src/components/common/Header.css
+++ b/src/components/common/Header.css
@@ -27,6 +27,15 @@ a {
 	position: relative;
 	font: 1em Helvetica, Sans-Serif;
 	letter-spacing: 2px;
-  color: rgba(0,0,255,0.5);
+  color: rgba(0,0,255,1);
   margin-left: -.5em;
+}
+
+.logo {
+  animation: myLogo 5s infinite;
+}
+
+@keyframes myLogo {
+  from {transform: rotateY(0deg)}
+  to {transform: rotateY(360deg)}
 }
