--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -3,9 +3,14 @@
   text-align: center;
   display: inline;
 	position: relative;
-	font: 2em Helvetica, Sans-Serif;
+	font: 2.5em Helvetica, Sans-Serif;
 	letter-spacing: -2px;
-  color: rgba(255,0,0,0.5)
+  color: rgba(0,0,255,0.5)
+}
+.profileHeader:after {
+	content: "Profile Username";
+	position: absolute; left: 68px; top: 3px;
+	color: rgba(255,0,0,0.5);   
 }
 
 .tweetWrapper {
