--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,34 +1,18 @@
 .Home {
-  padding: 1em;
-  text-align: center;
-  }
-  img {
-    display: flex;
-    justify-content: flex-start;
-    width: 20%;
-    height: 20%;
-    margin: auto;
-    display: inline-block
-  }
-  ul {
-    list-style-type: none;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 10px;
-    margin: 10px;
-  } 
-  li {
-    padding: 0px 50px;
-  }
-
-  a {
-    text-decoration: none;
-    color: black;
-    font-size: 1.4em;
-  }
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 150px 150px 150px;
+  padding: 1 em;
+  margin: 20px;
+}
 header {
+  grid-column: 1 / span 4;
   background-color: #84B3DA;
-  margin: auto;
-  padding: 0;
+}
+footer {
+  position: absolute;
+  bottom: 0;
+}
+.sidebar {
+  background-color: #84B3DA;
 }
