holy eff my css

--- a/src/components/landing/Home.css
+++ b/src/components/landing/Home.css
@@ -1,35 +1,35 @@
-
-ul {
-  padding: 0;
-}
-.profile  {
-  display: none;
-  img {
-    height: 10vh;
+.main {
+  ul {
+    padding: 0;
   }
-  h3 {
-    font-size: 1em;
+  .profile  {
+    display: none;
+    img {
+      height: 10vh;
+    }
+    h3 {
+      font-size: 1em;
+    }
+    img {
+      max-height: 20vh;
+      border-radius: 60px
+    }
   }
-  img {
-    max-height: 20vh;
-    border-radius: 60px
+  
+  .post {
+    margin: 2px;
+    background-color: #DEEBED;
+    button {
+      background-color: #D8D8D8;
+    }
+    input {
+      border: 1px solid #D8D8D8;
+    }
   }
-}
-
-.post {
-  margin: 2px;
-  background-color: #DEEBED;
-  button {
-    background-color: #D8D8D8;
+  
+  @media screen and (min-width 1000px) {
+    .profile {
+      
+    }
   }
-  input {
-    border: 1px solid #D8D8D8;
-  }
-}
-
-@media screen and (min-width 1000px) {
-  .profile {
-    
-  }
-}
-
+}  
