--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -1,4 +1,15 @@
-.profile {
-  display: grid;
-  justify-content: flex-start
+/*browser*/
+.Profile {
+  display: flex;
+ 
+  article {
+    margin: .5em;
+  }
+
+  aside {
+    position: relative;
+    margin: auto;
+    border: 1px solid black;
+    width: 20vw;
+  }
 }
