--- a/src/components/user/User.css
+++ b/src/components/user/User.css
@@ -1,10 +1,15 @@
 .User { 
+  border: 1px solid black;
+  width: 20vw;
+  text-align: center;
+  margin: .5em;
+  
   figure {
-    height: 10vh;
     margin: .5em;
   }
   img {
     border-radius: 60px;
+    margin: auto;
   }
   h3 {
     margin: .5em;
