--- a/src/components/profile/Profile.css
+++ b/src/components/profile/Profile.css
@@ -13,3 +13,32 @@
     width: 20vw;
   }
 }
+
+.Profile {
+  width: 60vw;
+  margin: 1px;
+  figure {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+    margin: .4em;
+    h3 {
+      padding: 0;
+      margin: 0;
+      font-size: 1em;
+    }
+  }
+  img {
+    max-height: 7vh;
+    border-radius: 60px;
+  }
+  p {
+    max-height: 10vh;
+    padding: .5em;
+  }
+  li {
+    list-style: none;
+    margin: .5em;
+    border: 1px black solid;
+  } 
+} 
