--- a/src/components/tweets/Tweets.css
+++ b/src/components/tweets/Tweets.css
@@ -1,8 +1,8 @@
-.Tweet {
-  /* display: grid; */
-  /* grid-template-columns: 1fr 4fr; */
-  width: 60vw;
-  margin: 1px;
+ /* .Tweet {
+  display: grid;
+  grid-template-columns: 1fr 4fr;  */
+  /* width: 60vw; */
+  /* margin: 1px;
   figure {
     margin: 0;
     padding: 0;
@@ -28,4 +28,4 @@
 .Tweets {
   list-style: none;
   margin: .5em;
-}
+}  */
