--- a/src/components/loading/Loading.css
+++ b/src/components/loading/Loading.css
@@ -1,8 +1,9 @@
-
-h2 {
-  text-align: center;
-}
-img{
-  display: block;
-  margin: auto;
+.Loading {
+  h2 {
+    text-align: center;
+  }
+  img{
+    /* display: block; */
+    margin: auto;
+  }
 }
