--- a/src/components/messages/Message.css
+++ b/src/components/messages/Message.css
@@ -1,20 +1,23 @@
-.section {
-  display: flex;
-  grid-template-columns: 1fr 4fr;
-  padding: .75em;
-  p {
+/*undo .Message to see better formatting */
+.Message {
+  section {
+    display: flex;
+    grid-template-columns: 1fr 4fr;
+    padding: .75em;
+    p {
+      margin: .5em;
+      padding: 0;
+    }
+    ul {
+      list-style: none;
+    }
+  }
+  .date {
+    font-size: .75em;
     margin: .5em;
-    padding: 0;
   }
-  ul {
-    list-style: none;
+  
+  .img {
+    margin: 0;
   }
-}
-.date {
-  font-size: .75em;
-  margin: .5em;
-}
-
-.img {
-  margin: 0;
 }
