--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,9 +1,11 @@
 .Header {
   background-image: linear-gradient(to right top, #2890d4, #80a8e0, #b4c2ea, #dedff4, #ffffff);
+  overflow:hidden;
   h1 {
+    box-sizing: border-box;
     text-align: center;
     position: relative;
-    left: 45px;
+ 
     font-family: Helvetica;
     letter-spacing: .25em;
     margin: 0 auto;
@@ -15,7 +17,7 @@
     font-family: Arial, Helvetica, sans-serif;
     color: #FDFEFF;
     text-align:right;
-    font-size:12px;
+    font-size:.5em;
   }
   img { 
     position:relative;
