--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,18 +1,48 @@
 .Home {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: 150px 150px 150px 150px;
-  padding: 1 em;
-  margin: 20px;
-}
+  align-content: center;
+  }
 header {
-  grid-column: 1 / span 5;
-  background-color: #84B3DA;
+  display: flex;
+  margin-right: auto;
+  background-color: #F78764;
+  text-align: center;
+  padding: 25px 25px;
+  font-size: 1.7em;
+
 }
-div {
-  grid-column: 1/ span 2;
+
+h2 {
+  font-size: 2em;
+  margin: 40px;
 }
+
 footer {
   position: absolute;
   bottom: 0;
+}
+a {
+  text-decoration: none;
+
+}
+ul {
+  list-style-type: none;
+}
+nav {
+ display: flex;
+ flex-direction: row;
+ a {
+   padding: 20px;
+   color: black;
+ }
+ a:hover {
+   background-color:lightsalmon;
+ }
+
+}
+
+@media only screen and (max-width: 600px) {
+  .Home {
+    background-color: lightgray;
+    color: white;
+  }
 }
