--- a/src/components/css/Navigation.css
+++ b/src/components/css/Navigation.css
@@ -1,13 +1,16 @@
+@import url('https://fonts.googleapis.com/css?family=Margarine');
 .nav {
-
+  color: #4c5270;
   ul {
+    
     display: flex;
     justify-content: space-around;
     list-style-type: none;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Margarine', cursive;
   }
   a {
+    background-color: #4cd7d0;
     text-decoration: none;
     flex: 1 1 auto;
     margin: 10px;
@@ -16,8 +19,8 @@
     text-transform: uppercase;
     transition: 0.5s;
     background-size: 200% auto;
-    color: white;
-    box-shadow: 0 0 20px #eee;
+    color: #4c5270;
+    box-shadow: 0 0 20px #4c5270;
     border-radius: 10px;
 
     :hover {
