--- a/src/components/css/Navigation.css
+++ b/src/components/css/Navigation.css
@@ -1,20 +1,25 @@
 @import url('https://fonts.googleapis.com/css?family=Margarine');
 .nav {
   color: #4c5270;
+  img {
+    width: 5%;
+  }
   ul {
-    
     display: flex;
-    justify-content: space-around;
+    flex-flow: row-wrap;
+    justify-content: flex-end;
     list-style-type: none;
     padding: 0;
     font-family: 'Margarine', cursive;
   }
+ 
   a {
     background-color: #4cd7d0;
     text-decoration: none;
     flex: 1 1 auto;
+
     margin: 10px;
-    padding: 10px;
+    padding: 1px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
@@ -24,7 +29,7 @@
     border-radius: 10px;
 
     :hover {
-      background-position: right center; /* change the direction of the change here */
+      background-position: right center; 
       background-image: linear-gradient(to right, #f6d365 0%, #fda085 51%, #f6d365 100%);
     }
   
