--- a/src/components/css/CreateTweetForm.css
+++ b/src/components/css/CreateTweetForm.css
@@ -6,4 +6,12 @@
   input[type=text]:focus {
     border: 3px solid #555;
   }
+  button {
+    width: 70px;
+    height: 50px;
+    transition: width 1s;
+  }
+  button:hover {
+    width: 100px;
+  }
 }
