creating loading page and made other changes

--- a/src/components/css/Navigation.css
+++ b/src/components/css/Navigation.css
@@ -6,20 +6,16 @@
   }
   ul {
     display: flex;
-    flex-flow: row-wrap;
-    justify-content: flex-end;
+    float: right;
     list-style-type: none;
-    padding: 0;
     font-family: 'Margarine', cursive;
   }
- 
+  
   a {
     background-color: #4cd7d0;
     text-decoration: none;
-    flex: 1 1 auto;
-
-    margin: 10px;
-    padding: 1px;
+    padding: 1.5em;
+    margin: 20px;
     text-align: center;
     text-transform: uppercase;
     transition: 0.5s;
