--- a/src/components/css/CreateTweetForm.css
+++ b/src/components/css/CreateTweetForm.css
@@ -1,10 +1,20 @@
 .form {
   input {
+    display: block;
     width: 50%;
+    align-self: center;
+    margin: auto;
     font-size: 11pt;
+    max-width: 150px
   }
   input[type=text]:focus {
     border: 3px solid #555;
+    display: block;
+    width: 50%;
+    max-width: 2500px;
+    height: 50vh;
+    margin: 0.2em;
+    padding: 0.2em;
   }
   button {
     width: 70px;
