--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -2,7 +2,7 @@
   
   margin: auto;
   ul {
-    color: green;
+    color: black;
     font-size: 1.25em;
     list-style-type: none;
     font-weight: bold;
